// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`countries reducer should handle FETCH_COUNTRIES_FAIL 1`] = `
Object {
  "error": [Error],
  "isFetching": false,
}
`;

exports[`countries reducer should handle FETCH_COUNTRIES_SUCCESS 1`] = `
Object {
  "ids": Array [
    Object {
      "country_code": "al",
      "currency_format": "$<%= price %>",
      "currency_seperator": ".",
      "decimal": true,
      "default_price": 0.99,
      "enabled": true,
      "flag_icon": "/images/flags/alb.png",
      "language": "en-GB",
      "navbar": "gb",
      "region": "Europe",
      "search_country": "uk",
      "stores": Object {
        "apps": true,
        "books": true,
        "macapps": true,
        "movie": false,
        "music": false,
        "podcast": true,
        "tv": false,
      },
      "translation_key": "al",
    },
    Object {
      "country_code": "cz",
      "currency_format": "$<%= price %>",
      "currency_seperator": ".",
      "decimal": true,
      "default_price": 0.99,
      "enabled": true,
      "flag_icon": "/images/flags/cze.png",
      "language": "en-GB",
      "region": "Europe",
      "search_country": "us",
      "stores": Object {
        "apps": true,
        "books": true,
        "macapps": true,
        "movie": true,
        "music": true,
        "podcast": true,
        "tv": false,
      },
      "translation_key": "cz",
    },
  ],
  "isFetching": false,
}
`;

exports[`countries reducer should return the initial state 1`] = `
Object {
  "error": null,
  "ids": Array [],
  "isFetching": false,
}
`;
